--- a/homeworks/h2/css/style.css
+++ b/homeworks/h2/css/style.css
@@ -1,9 +1,13 @@
-.exercicios {
+.container-exercicios {
     height: 100vh;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+}
+
+.exercicios {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 15px;
 }
 
