--- a/homeworks/h2/css/style.css
+++ b/homeworks/h2/css/style.css
@@ -15,3 +15,17 @@
     display: flex;
     flex-direction: column;
 }
+
+#teclas {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 5px;
+}
+
+.igual {
+    grid-row: span 2;
+}
+
+.btn-clear {
+    grid-column: span 2;
+}
