--- a/homeworks/h2/css/style.css
+++ b/homeworks/h2/css/style.css
@@ -3,11 +3,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .exercicios {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 200px);
     gap: 15px;
 }
 
@@ -28,4 +29,27 @@
 
 .btn-clear {
     grid-column: span 2;
+}
+
+@keyframes background {
+  from   {
+    bottom: -100%;
+    opacity: .8;
+  }
+  to  {
+    bottom: 100%;
+    opacity: 1;
+  }
+}
+.animation-background {
+    animation: background 8s infinite linear;
+    transition: all .5s ease-in-out;
+}
+
+.name {
+    position: fixed;
+    right: 0;
+    font-weight: 700;
+    height: 450px;
+    writing-mode: vertical-lr;
 }
