--- a/homeworks/h5/sass/home.scss
+++ b/homeworks/h5/sass/home.scss
@@ -1,30 +1,35 @@
 .home {
-    display: flex;
+  display: flex;
+  gap: $super-small;
+  padding: $super-small;
+  flex-wrap: wrap;
+  @include center-items;
 
-    .card {
-        border-radius: $border-radius-1;
-        width: 100%;
-        max-width: 200px;
-        box-shadow: $main-shadow;
+  .card {
+    border-radius: $border-radius-1;
+    width: 100%;
+    max-width: 200px;
+    box-shadow: $main-shadow;
 
-        img {
-            border-radius: $border-radius-1;
-            width: 100%;
-        }
-
-        > div {
-            padding: 42px 12px 12px 12px;
-            margin-top: -62px;
-            > button {
-                margin-bottom: $mini-large;
-            }
-            > p {
-                font-weight: 300;
-
-                &::first-letter {
-                    text-transform: uppercase;
-                }
-            }
-        }
+    img {
+      border-radius: $border-radius-1;
+      width: 100%;
     }
+
+    > div {
+      padding: 42px 12px 12px 12px;
+      margin-top: -62px;
+      > button {
+        margin-bottom: $mini-large;
+      }
+      > p {
+        font-weight: 300;
+        min-height: 75px;
+
+        &::first-letter {
+          text-transform: uppercase;
+        }
+      }
+    }
+  }
 }
