--- a/homeworks/h5/css/style.css
+++ b/homeworks/h5/css/style.css
@@ -35,6 +35,11 @@ body {
   display: grid;
   grid-template-columns: 2fr 1fr;
 }
+@media (max-width: 768px) {
+  .column {
+    grid-template-columns: 100%;
+  }
+}
 
 .btn {
   display: flex;
@@ -49,13 +54,23 @@ body {
   cursor: pointer;
   font-weight: 600;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  gap: 0.5rem;
 }
 .btn:hover {
   animation: size 1s ease-in-out infinite;
 }
+.btn > i {
+  color: #FFFFFF;
+}
 
 .home {
   display: flex;
+  gap: 0.75rem;
+  padding: 0.75rem;
+  flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .home .card {
   border-radius: 0.8125rem;
@@ -76,6 +91,7 @@ body {
 }
 .home .card > div > p {
   font-weight: 300;
+  min-height: 75px;
 }
 .home .card > div > p::first-letter {
   text-transform: uppercase;
