--- a/homeworks/h5/sass/home.scss
+++ b/homeworks/h5/sass/home.scss
@@ -1,8 +1,9 @@
 .home {
   display: flex;
   gap: $super-small;
-  padding: $super-small;
+  // padding: $super-small;
   flex-wrap: wrap;
+  position: relative;
   @include center-items;
 
   .card {
@@ -10,6 +11,10 @@
     width: 100%;
     max-width: 200px;
     box-shadow: $main-shadow;
+    background-color: #ffdee9;
+    background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
+
+    padding: 1px;
 
     img {
       border-radius: $border-radius-1;
