--- a/homeworks/h5/sass/post.scss
+++ b/homeworks/h5/sass/post.scss
@@ -3,18 +3,18 @@
   display: flex;
   flex-direction: column;
   gap: $super-small;
+  height: fit-content;
+  background-color: #ffdee9;
+  background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
 
-  position: fixed;
-  top: 0;
-  right: 0;
-  max-width: 328px;
-  height: 100vh;
-  overflow-y: auto;
+  border-radius: $border-radius-1;
+  box-shadow: $main-shadow;
 
   > img {
     border-radius: $border-radius-1;
     box-shadow: $main-shadow;
     width: 100%;
+    animation: size 10s ease-in-out infinite;
   }
 
   > form {
@@ -61,9 +61,9 @@
     flex-direction: column;
 
     > div {
-        margin: 4px 0;
+      margin: 4px 0;
+      animation: size 0.5s ease-in-out forwards;
       small {
-        // padding-left: 8px;
         padding: 2px 0;
 
         i {
